# D2R

./: .gitignore  CACHE_WALKTHROUGH_ACT1.md  CHANGELOG.md  INDEX.md  INSTALL.md  ISSUES_BACKLOG.md  LATENCY_ANALYSIS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STRUCTURE.md  install.bat  install.ps1  latency_profile.py  memory.md  uninstall.ps1
assets/: .gitkeep
botter/: Cargo.toml  build.rs
botter/benches/: shard_bench.rs
botter/configs/: amazon_javazon.yaml  assassin_trapsin.yaml  barbarian_whirlwind.yaml  druid_wind.yaml  necromancer_fishymancer.yaml  paladin_hammerdin.yaml  sorceress_blizzard.yaml  sorceress_meteorb.yaml
botter/deploy/: default_config.yaml  install_host.ps1
botter/src/: host_registry.rs  lib.rs  main.rs
botter/src/config/: mod.rs
botter/src/decision/: engine.rs  game_manager.rs  mod.rs  progression.rs  quad_cache.rs  script_executor.rs
botter/src/input/: simulator.rs
botter/src/native_messaging/: mod.rs
botter/src/stealth/: capture_timing.rs  handle_table.rs  process_identity.rs  syscall_cadence.rs  thread_input.rs
botter/src/training/: logger.rs
botter/src/vision/: capture.rs  mod.rs  shard_buffer.rs
botter/tests/: stress.rs
docs/: CPU_PROOF_SESSION.md  skills.md
extension/: cpu_proof_demo.html  gen_proof_gif.js  test_gui.html  test_serve.sh  vision_perf.html
extension/chrome_extension/: background.js  manifest.json  map_content.js  popup.css  popup.html  popup.js
extracted/map_helper/d2r_map_helper/extension/: manifest_additions.json  map_background.js
extracted/map_helper/d2r_map_helper/src/: main.rs  protocol.rs
extracted/vision_agent/d2_vision_agent/: Cargo.toml  README.md
kolbot/: .gitignore  package.json
maphack/: Cargo.toml  offsets.json.example
maphack/installer/: install_map_host.ps1
maphack/src/: host_registry.rs  main.rs  mapgen.rs  memory.rs  offsets.rs  overlay_window.rs  protocol.rs
maphack/src/stealth/: mod.rs  process_identity.rs
maphack/tests/: verify.py
native-hosts/: map_manifest.json  native_host_manifest.json
overlay/: Cargo.toml  offsets.json.example
overlay/installer/: install_map_host.ps1
overlay/src/: discovery.rs  host_registry.rs  main.rs  mapgen.rs  memory.rs  offsets.rs  overlay_window.rs
overlay/src/stealth/: process_identity.rs  syscall_cadence.rs
overlay/tests/: protocol_test.py  verify.py
vision/: Cargo.toml
vision/benches/: shard_bench.rs
vision/configs/: amazon_javazon.yaml  assassin_trapsin.yaml  barbarian_whirlwind.yaml  druid_wind.yaml  necromancer_fishymancer.yaml  paladin_hammerdin.yaml  sorceress_blizzard.yaml  sorceress_meteorb.yaml
vision/deploy/: default_config.yaml  install_host.ps1  native_host_manifest.json
vision/src/: main.rs
vision/src/config/: mod.rs
vision/src/decision/: engine.rs  game_manager.rs  quad_cache.rs  script_executor.rs
vision/src/input/: mod.rs  simulator.rs
vision/src/native_messaging/: mod.rs
vision/src/stealth/: handle_table.rs  mod.rs
vision/src/training/: mod.rs
vision/src/vision/: capture.rs  shard_buffer.rs
vision/tests/: stress.rs
(+147 files in other folders)
