[package]
name = "kzb_vision_agent"
version = "1.0.0"
edition = "2021"
description = "KZB Vision Agent — Chrome native messaging host"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "vision_bench"
path = "src/bin/vision_bench.rs"

[[bench]]
name = "shard_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
