[package]
name = "d2r_map_helper"
version = "1.0.0"
edition = "2021"
description = "D2R Map Helper - Chrome Native Messaging Host (com.d2vision.map)"

[[bin]]
name = "chrome_map_helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt", "handleapi", "processthreadsapi", "memoryapi",
    "tlhelp32", "psapi", "winbase", "errhandlingapi",
    "wow64apiset", "libloaderapi", "consoleapi", "synchapi",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
